Added functionality to connect to WSL2 host shell from django container shell

--- a/web/docker-compose.yaml
+++ b/web/docker-compose.yaml
@@ -23,6 +23,7 @@ services:
       - '8000:8000'
     volumes:
       - .:/app
+      - django_ssh_keys:/root/.ssh
     environment:
       - DJANGO_ENV=${DJANGO_ENV}
       - DATABASE_NAME=${DATABASE_NAME}
@@ -35,3 +36,4 @@ services:
 
 volumes:
   pg_data:
+  django_ssh_keys:
