--- a/web/requirements.txt
+++ b/web/requirements.txt
@@ -1,7 +1,10 @@
 asgiref==3.7.2
 Django==4.2.3
+django-stubs==4.*
 psycopg2==2.9.6
 python-dotenv==1.0.0
 sqlparse==0.4.4
 typing_extensions==4.7.1
 paramiko==3.1.0
+types-paramiko==2.11.1
+mypy
